# cells-interlinked

./: .env.example  .gitignore  CLAUDE.md  README.md
docs/: architecture.md
e2e/: README.md  integration.mjs  perf-during-probe.mjs  smoke.mjs
journal/app/reports/[slug]/: page.tsx
journal/data/reports/suspect-hesitates-behind-glass/: body.md  report.json
server/: pyproject.toml
server/cells_interlinked/: config.py  proposer_worker.py
server/cells_interlinked/api/: app.py  routes_autorun.py  routes_journal.py  routes_probe.py  routes_stream.py  runs.py
server/cells_interlinked/pipeline/: abliteration.py  analyzer.py  autorun.py  generation_loop.py  labels.py  model_loader.py  phase_tracker.py  probe_queue.py  probes_library.py  proposer.py  sae_runner.py  verdict.py
server/cells_interlinked/storage/: db.py
server/scripts/: verify_environment.py
web/: next.config.ts
web/app/: globals.css  layout.tsx
web/app/archive/: page.tsx
web/app/autorun/: page.tsx
web/app/components/: AggregatePanel.tsx  CaveatsPanel.tsx  DeltaPanel.tsx  ExplainerBadge.tsx  Footer.tsx  Iris.tsx  Polygraph.tsx  ProbePicker.tsx  TokenPanes.tsx  WarmingUpOverlay.tsx
web/app/fine-print/: page.tsx
web/app/interrogate/: page.tsx
web/app/journal/: page.tsx
web/app/verdict/[runId]/: page.tsx
web/lib/: probes.ts  sse.ts  store.ts  types.ts
